test/src/e2e_vm_tests/test_programs/should_fail/unify_identical_unknowns/src/main.sw
script;

pub trait Foo {
    fn bar(self, other: Self) -> bool;
}

impl Foo for NonExistant {
    fn bar(self, other: Self) -> bool {
        false
    }
}

fn main() { }
